--- a/AutomatingPVRCenemas/.classpath
+++ b/AutomatingPVRCenemas/.classpath
@@ -30,5 +30,14 @@
 	<classpathentry kind="lib" path="D:/Selenium/selenium-java-3.141.59/libs/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="D:/Selenium/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
 	<classpathentry kind="lib" path="D:/Selenium/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/ATExcelReport.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/jfreechart.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/jfreechart-dependency-jcommon-1.0.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/poi-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/poi-ooxml-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/poi-ooxml-schemas-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KAVERI MORE/Downloads/AT Excel Report Jars.jar/AT Excel Report Jars/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
